--- a/styles/simple.css
+++ b/styles/simple.css
@@ -71,6 +71,8 @@
 .worldbuilding .editor,
 .worldbuilding .editor-content {
   height: 100%;
+  min-height: 10px;
+  min-width: 10px;
 }
 .worldbuilding .item-list {
   list-style: none;
