--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -59,14 +59,15 @@
                 <a class="attribute-control" data-action="create"><i class="fas fa-plus"></i></a>
             </header>
 
-            <ol class="attribute-list">
-                <li class="attribute-flexrow" data-attribute="">
-                    <span class="attribute-label flexrow" name="data.attributes..label"></span>
-                    <div class="attribute-editbox flexrow">
-                        <input class="attribute-value" type="text" name="data.attributes..value" value="" data-dtype="Number" />
-                    </div>
-                </li>
-            </ol>
+            <div class="attributes flex-group-left">
+                {{#each data.attributes as |attribute key|}}
+                <div class="attribute flexrow flex-group-center">
+                    <label for="data.attributes.{{key}}.value" class="resource-label">{{attribute.label}}</label>
+                    <input type="text" name="data.attributes.{{key}}.value" value="{{attribute.value}}" data-dtype="Number"/>
+                    <span class="attributes-roll rollable" data-roll="attributes.{{key}}.roll" data-label="{{key}}">{{attributes.roll}}</span>
+                </div>
+                {{/each}}
+            </div>
 
 
 
