--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -64,7 +64,7 @@
                 <div class="attribute flexrow flex-group-center">
                     <label for="data.attributes.{{key}}.value" class="resource-label">{{attribute.label}}</label>
                     <input type="text" name="data.attributes.{{key}}.value" value="{{attribute.value}}" data-dtype="Number"/>
-                    <span class="attributes-roll rollable" data-roll="attributes.{{key}}.roll" data-label="{{key}}">{{attributes.roll}}</span>
+                    <span class="attribute-roll rollable" data-roll="@attributes.{{key}}.roll" data-label="{{key}}">{{attribute.roll}}</span>
                 </div>
                 {{/each}}
             </div>
