--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -5,7 +5,7 @@
         <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
         <div class="header-fields">
             <div class="header-details flexrow">
-                <h4 class="charname">Name<input name="name" type="text" value="{{actor.name}}" size="5" placeholder="Name"/></h4>
+                <h4 class="charname">Name<input name="name" class="" type="text" value="{{actor.name}}" size="5" placeholder="Name"/></h4>
                 <h4 class="chararchetype">Archetype<input name="data.archetype" type="text" value="{{data.archetype}}" size="5" placeholder="Archetype"/></h4>
             </div>
             <div class="header-details flexrow">
@@ -17,13 +17,7 @@
                 <h4 class="description">Description<input name="data.description" type="text" value="{{data.description}}" placeholder="Description"/></h4>
             </div>
 
-            <div class="resource flexrow">
-                <input type="text" name="data.health.value" value="{{data.health.value}}" data-dtype="Number"/>
-                <span> / {{data.derived.health.max}}</span>
-                <span>Guard: {{data.defenses.guard.value}}</span>
-                <span>Toughness: {{data.defenses.toughness.value}}</span>
-                <span>Resolve: {{data.defenses.resolve.value}}</span>
-            </div>
+
         </div>
     </header>
 
@@ -39,7 +33,7 @@
     <section class="sheet-body">
 
         {{!-- Attributes Tab --}}
-        <div class="tab attributes" data-group="primary" data-tab="attributes">
+        <div class="tab attributes flexrow" data-group="primary" data-tab="attributes">
 <!--            <header class="attributes-header flexrow">-->
 <!--                <span class="attribute-key">Attributes</span>-->
 <!--                <span class="attribute-value">Value</span>-->
@@ -51,13 +45,41 @@
                 {{#each data.attributes as |attribute key|}}
                 <div class="attribute flexrow flex-group-center">
                     <label for="data.attributes.{{key}}.value" class="resource-label">{{attribute.label}}</label>
-                    <input type="text" name="data.attributes.{{key}}.value" value="{{attribute.value}}" data-dtype="Number"/>
+                    <input type="text" class="attribute-input" name="data.attributes.{{key}}.value" value="{{attribute.value}}" data-dtype="Number"/>
                     <button class="attribute-roll rollable" data-roll="{{attribute.value}}" data-label="{{attribute.label}}">Roll {{attribute.label}}</button>
                 </div>
                 {{/each}}
             </div>
 
+            <div class="attributes flexcol">
 
+                <div class="attribute-hpdef flexrow">
+                    <div class="defenses flexrow">
+                        <span>Guard: {{data.defenses.guard.value}}<br>Toughness: {{data.defenses.toughness.value}}<br>Resolve: {{data.defenses.resolve.value}}</span>
+                    </div>
+
+                    <div class="attributes">
+                        <h3>Hit Points</h3>
+                        <span><div class="health-label">Current / Max</div></span>
+                        <span class="health"><input type="text" class="health" name="data.health.value" value="{{data.health.value}}" data-dtype="Number"/> / {{data.derived.health.max}}</span>
+
+                        <div>
+                            Legend Points <input type="text" class="legendpoints" name="data.legendpoints" value="{{data.legendpoints}}" data-dtype="Number"/>
+                        </div>
+                        <div>
+                            Speed <input type="text" class="speed" name="data.speed.value" value="{{data.speed.value}}" data-dtype="Number"/>
+                        </div>
+                        <div>
+                            Wealth Level <input type="text" class="wealthlevel" name="data.wealthlevel" value="{{data.wealthlevel}}" data-dtype="Number"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="attribute-actions flexrow">
+                    <h3>Actions</h3>
+                </div>
+
+            </div>
 
 
         </div>
@@ -86,9 +108,13 @@
         </div>
 
 
-        {{!-- Biography Tab --}}
+        {{!-- Settings Tab --}}
         <div class="tab settings" data-group="primary" data-tab="settings">
 <!--            TODO: Add settings here. Checkboxes for feats and other shizzzzzzzzz-->
+            Armor<input type="text" class="armor" name="data.defenses.armor" value="{{data.defenses.armor}}" data-dtype="Number"/>
+            Guard Other<input type="text" class="guardOther" name="data.defenses.guardOther" value="{{data.defenses.guardOther}}" data-dtype="Number"/>
+            Toughness Other<input type="text" class="toughOther" name="data.defenses.toughOther" value="{{data.defenses.toughOther}}" data-dtype="Number"/>
+            Resolve Other<input type="text" class="resolveOther" name="data.defenses.resolveOther" value="{{data.defenses.resolveOther}}" data-dtype="Number"/>
         </div>
     </section>
 </form>
